--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-axios": "^3.5.2",
+    "vue-quill": "^1.5.1",
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
